<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/label_nome_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tag_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_nome_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/tag_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_nome_tag"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_cor_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tag_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nome_tag" />

    <TextView
        android:id="@+id/label_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/r"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_cor_tag" />

    <SeekBar
        android:id="@+id/seekbar_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="255"
        android:progressTint="#F44336"
        android:thumbTint="#F44336"
        app:layout_constraintEnd_toStartOf="@id/view_preview_cor"
        app:layout_constraintStart_toEndOf="@id/label_r"
        app:layout_constraintTop_toBottomOf="@id/label_cor_tag" />

    <TextView
        android:id="@+id/label_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/g"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_r" />

    <SeekBar
        android:id="@+id/seekbar_g"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:max="255"
        android:progressTint="#4CAF50"
        android:thumbTint="#4CAF50"
        app:layout_constraintEnd_toStartOf="@id/view_preview_cor"
        app:layout_constraintStart_toEndOf="@id/label_g"
        app:layout_constraintTop_toBottomOf="@id/seekbar_r" />

    <TextView
        android:id="@+id/label_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_g" />

    <SeekBar
        android:id="@+id/seekbar_b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:max="255"
        android:progressTint="#2196F3"
        android:thumbTint="#2196F3"
        app:layout_constraintEnd_toStartOf="@id/view_preview_cor"
        app:layout_constraintStart_toEndOf="@id/label_b"
        app:layout_constraintTop_toBottomOf="@id/seekbar_g" />

    <View
        android:id="@+id/view_preview_cor"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/seekbar_r" />

</androidx.constraintlayout.widget.ConstraintLayout>